# vala-app-template

./: .gitignore  AUTHORS  CMakeLists.txt  README.md  go
po/: CMakeLists.txt
src/: App.vala  CMakeLists.txt
src/View/: AppWindow.vala
